# capstone

./: .gitattributes  .gitignore  Deployment.md  README.md  Task.md  locate918_backup.sql  repo_tree.txt
backend/: .env.dev  .env.example  Cargo.toml  Dockerfile  events.csv
backend/migrations/: 001_initial.sql  001_initial.sql.bak
backend/src/: auth.rs  main.rs
backend/src/cron_service/scheduler/: Dockerfile  requirements.txt  run_job.py  scheduler.py
backend/src/db/: mod.rs
backend/src/models/: mod.rs  mod.rs.bak
backend/src/routes/: chat.rs  events.rs  events.rs.bak  mod.rs  users.rs  venues.rs
backend/src/scraper/: Dockerfile  ScraperTool.py  SeedPlaces.py  asyncScraper.py  cains_ballroom.py  geocodeVenue.py  mod.rs  requirements.txt  saved_urls.json  scraperRoutes.py  scraperUtils.py  visitTulsa.py
backend/src/scraper/scraped_data/: BIT_20260214_180133.html  BOK3_20260205_202242.html  BOK3_20260205_202246.json  BOK__20260205_201959.html  BOK__20260205_202002.json  Bob_Dylan_Center_20260212_193328.html  Cains_20260205_184814.html  Cains_20260205_184817.json  City_of_tulsa_20260212_193638.html  Colony_20260205_184945.html  Colony_20260205_185001.html  Eventbrite_20260212_193859.html  Eventbrite_20260212_195002.html  Eventbrite_20260212_195124.html  Eventbrite_20260214_131401.html  GGR_20260205_192105.html  GGR_20260205_192112.json  GG_20260205_190619.html  GG_20260205_190643.html  GG_20260205_191325.html  GG_20260205_191334.html  GG_20260205_191350.html  GG_20260205_191355.json  Gathering_Place_20260212_193423.html  (+86 more)
backend/src/services/: llm.rs  mod.rs
(+73 files in other folders)
